--- a/chat/Gemfile
+++ b/chat/Gemfile
@@ -9,10 +9,17 @@ gem 'rake', '~> 13.0.0'
 gem 'i18n', '~> 1.8.0'
 gem 'config', '~> 2.2.0'
 
+gem 'redis', '~> 4.2.0'
+gem "sidekiq", '~> 6.1.0'
+
 gem 'dry-initializer', '~> 3.0.0'
 gem 'dry-validation', '~> 1.5.0'
 
 gem 'activesupport', '~> 6.0.0', require: false
+
+gem 'faraday', '~> 1.0.0'
+gem 'faraday_middleware', '~> 1.0.0'
+gem "typhoeus", '~> 1.3.0'
 
 gem 'pry', '~> 0.13.0'
 
