--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,32 +2,21 @@ AllCops:
   DisplayCopNames: true
   StyleGuideCopsOnly: false
   Exclude:
-    - '**/bin/**/*'
+    - '**/config/**/*'
     - '**/log/**/*'
     - '**/tmp/**/*'
-    - '**/vedor/**/'
     - 'Gemfile'
     - 'config.ru'
-    - 'Rakefile'
-    - 'db/schema.rb'
-    - 'spec/application_helper.rb'
-    - 'spec/spec_helper.rb'
-    - 'node_modules/**/*'
-  TargetRubyVersion: 2.7.1
 
-Layout/LineLength:
-  Max: 100
-  Exclude:
-    - 'db/seeds.rb'
+Metrics/LineLength:
+  Max: 120
 
-Metrics/MethodLength:
-  Max: 15
+Style/RedundantFetchBlock:
+  Enabled: false
 
-Metrics/BlockLength:
-  Max: 25
-  Exclude:
-    - 'config/application.rb'
-    - '**/spec/**/*'
+Style/FrozenStringLiteralComment:
+  Enabled: true
+  EnforcedStyle: always
 
 Style/StringLiterals:
   EnforcedStyle: single_quotes
