--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -1,2 +1,25 @@
 db:
+  user: postgres
+  password: notsecure
   database: hero_rider_test
+redis:
+  db: 3
+  sidekiq_db: 4
+psn:
+  auth:
+    url: ''
+  trophies:
+    url: ''
+  game_trophies:
+    url: ''
+    endpoint: ''
+  profile:
+    url: ''
+    endpoint: ''
+  threads:
+    url: ''
+telegram:
+  bot_token: ''
+  admin_chat_id: # should be integer
+  main_chat_id: # should be integer
+  screenshot_worker: ''
