--- a/deploy/playbooks/files/env/vars.sample
+++ b/deploy/playbooks/files/env/vars.sample
@@ -14,6 +14,7 @@ TROPHY_GAME_TROPHIES_ENDPOINT=
 TROPHY_PROFILE_URL=
 TROPHY_PROFILE_ENDPOINT=
 TROPHY_THREADS_URL=
+TELEGRAM_BOT_NAME=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_ADMIN_CHAT_ID=
 TELEGRAM_MAIN_CHAT_ID=
