--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -11,18 +11,19 @@ redis:
   db: <%= ENV.fetch('REDIS_DB') %>
   sidekiq_db: <%= ENV.fetch('REDIS_SIDEKIQ_DB') %>
 psn:
-  auth:
-    url: <%= ENV.fetch('TROPHY_AUTH_URL') %>
-  trophies:
-    url: <%= ENV.fetch('TROPHY_TROPHIES_URL') %>
-  game_trophies:
-    url: <%= ENV.fetch('TROPHY_GAME_TROPHIES_URL') %>
-    endpoint: <%= ENV.fetch('TROPHY_GAME_TROPHIES_ENDPOINT') %>
-  profile:
-    url: <%= ENV.fetch('TROPHY_PROFILE_URL') %>
-    endpoint: <%= ENV.fetch('TROPHY_PROFILE_ENDPOINT') %>
-  threads:
-    url: <%= ENV.fetch('TROPHY_THREADS_URL') %>
+  v1:
+    auth:
+      url: <%= ENV.fetch('V1_TROPHY_AUTH_URL') %>
+    trophies:
+      url: <%= ENV.fetch('V1_TROPHY_TROPHIES_URL') %>
+    game_trophies:
+      url: <%= ENV.fetch('V1_TROPHY_GAME_TROPHIES_URL') %>
+      endpoint: <%= ENV.fetch('V1_TROPHY_GAME_TROPHIES_ENDPOINT') %>
+    profile:
+      url: <%= ENV.fetch('V1_TROPHY_PROFILE_URL') %>
+      endpoint: <%= ENV.fetch('V1_TROPHY_PROFILE_ENDPOINT') %>
+    threads:
+      url: <%= ENV.fetch('V1_TROPHY_THREADS_URL') %>
 telegram:
   bot_name: <%= ENV.fetch('TELEGRAM_BOT_NAME') %>
   bot_token: <%= ENV.fetch('TELEGRAM_BOT_TOKEN') %>
