--- a/deploy/playbooks/files/env/vars.sample
+++ b/deploy/playbooks/files/env/vars.sample
@@ -14,6 +14,9 @@ V1_TROPHY_GAME_TROPHIES_ENDPOINT=
 V1_TROPHY_PROFILE_URL=
 V1_TROPHY_PROFILE_ENDPOINT=
 V1_TROPHY_THREADS_URL=
+V2_TROPHY_TROPHIES_URL=
+V2_TROPHY_TROPHIES_USER_ENDPOINT=
+V2_TROPHY_TROPHIES_GAME_ENDPOINT=
 TELEGRAM_BOT_NAME=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_ADMIN_CHAT_ID=
