--- a/deploy/playbooks/files/env/vars.sample
+++ b/deploy/playbooks/files/env/vars.sample
@@ -17,6 +17,11 @@ V1_TROPHY_THREADS_URL=
 V2_TROPHY_TROPHIES_URL=
 V2_TROPHY_TROPHIES_USER_ENDPOINT=
 V2_TROPHY_TROPHIES_GAME_ENDPOINT=
+V2_TROPHY_PROFILE_URL=
+V2_TROPHY_PROFILE_FRIENDS_ENDPOINT=
+V2_TROPHY_PROFILE_INFO_ENDPOINT=
+V2_TROPHY_PROFILE_USER_IDS_ENDPOINT=
+V2_TROPHY_PROFILE_SEARCH_ENDPOINT=
 TELEGRAM_BOT_NAME=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_ADMIN_CHAT_ID=
