Add auth endpoints to dev and test config settings

--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -20,6 +20,9 @@ psn:
     threads:
       url: ''
   v2:
+    auth:
+      url: ''
+      endpoint: ''
     trophies:
       url: ''
       endpoints:
