--- a/deploy/playbooks/files/env/vars.sample
+++ b/deploy/playbooks/files/env/vars.sample
@@ -14,6 +14,9 @@ V1_TROPHY_GAME_TROPHIES_ENDPOINT=
 V1_TROPHY_PROFILE_URL=
 V1_TROPHY_PROFILE_ENDPOINT=
 V1_TROPHY_THREADS_URL=
+V2_TROPHY_AUTH_URL=
+V2_TROPHY_AUTH_CODE_ENDPOINT=
+V2_TROPHY_AUTH_TOKEN_ENDPOINT=
 V2_TROPHY_TROPHIES_URL=
 V2_TROPHY_TROPHIES_USER_ENDPOINT=
 V2_TROPHY_TROPHIES_GAME_ENDPOINT=
