--- a/deploy/playbooks/files/env/vars.sample
+++ b/deploy/playbooks/files/env/vars.sample
@@ -7,13 +7,24 @@ DB_PASSWORD=
 REDIS_PORT=6379
 REDIS_DB=1
 REDIS_SIDEKIQ_DB=2
-TROPHY_AUTH_URL=
-TROPHY_TROPHIES_URL=
-TROPHY_GAME_TROPHIES_URL=
-TROPHY_GAME_TROPHIES_ENDPOINT=
-TROPHY_PROFILE_URL=
-TROPHY_PROFILE_ENDPOINT=
-TROPHY_THREADS_URL=
+V1_TROPHY_AUTH_URL=
+V1_TROPHY_TROPHIES_URL=
+V1_TROPHY_GAME_TROPHIES_URL=
+V1_TROPHY_GAME_TROPHIES_ENDPOINT=
+V1_TROPHY_PROFILE_URL=
+V1_TROPHY_PROFILE_ENDPOINT=
+V1_TROPHY_THREADS_URL=
+V2_TROPHY_AUTH_URL=
+V2_TROPHY_AUTH_CODE_ENDPOINT=
+V2_TROPHY_AUTH_TOKEN_ENDPOINT=
+V2_TROPHY_TROPHIES_URL=
+V2_TROPHY_TROPHIES_USER_ENDPOINT=
+V2_TROPHY_TROPHIES_GAME_ENDPOINT=
+V2_TROPHY_PROFILE_URL=
+V2_TROPHY_PROFILE_FRIENDS_ENDPOINT=
+V2_TROPHY_PROFILE_INFO_ENDPOINT=
+V2_TROPHY_PROFILE_USER_IDS_ENDPOINT=
+V2_TROPHY_PROFILE_SEARCH_ENDPOINT=
 TELEGRAM_BOT_NAME=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_ADMIN_CHAT_ID=
