--- a/.github/workflows/notifications.yml
+++ b/.github/workflows/notifications.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          format: markdown
+          format: html
           disable_web_page_preview: true
           message: |
             Heads up! Hero Rider just get updated!
             Updates: ${{ github.event.head_commit.message }}
-            Look what [changed](https://github.com/Lokideos/hero_rider/commit/${{ github.sha }})
+            Look what <a href="https://github.com/Lokideos/underscore_repo/commit/${{ github.sha }}">changed</a>
