--- a/.github/workflows/notifications.yml
+++ b/.github/workflows/notifications.yml
@@ -19,4 +19,4 @@ jobs:
           message: |
             Heads up! Hero Rider just get updated!
             Updates: ${{ github.event.head_commit.message }}
-            Look what [changed]($CHANGES_URL)
+            Look what <a href="https://github.com/Lokideos/underscore_repo/commit/${{ github.sha }}">changed</a>
