--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - '**/config/**/*'
     - '**/log/**/*'
     - '**/tmp/**/*'
+    - 'spec/spec_helper.rb'
     - 'Gemfile'
     - 'config.ru'
 
