CHORE | Send notifications only about commits to master branch

--- a/.github/workflows/notifications.yml
+++ b/.github/workflows/notifications.yml
@@ -1,7 +1,9 @@
 ---
-name: New commit notification
+name: New commit to master notification
 on:
   push:
+    branches:
+      - main
 
 jobs:
   build:
