--- a/.github/workflows/notifications.yml
+++ b/.github/workflows/notifications.yml
@@ -1,9 +1,10 @@
 ---
-name: New commit to master notification
+name: New Release Notification
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["CI"]
+    types: [completed]
+    branches: [master]
 
 jobs:
   build:
