Ignore block length for specs

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,10 @@ AllCops:
     - 'Gemfile'
     - 'config.ru'
 
+Metrics/BlockLength:
+  Exclude:
+    - '**/spec/**/*'
+
 Layout/LineLength:
   Max: 120
 
