--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ deploy/hosts
 
 # Ignore local docker-compose file
 docker-compose.yml
+
+# Ignore local overcommit settings
+.overcommit.yml
+
+# Ignore local hunspell dictionaries
+.hunspell/
+
+# Ignore .pryrc
+.pryrc
